--- a/test/fixtures/campaigns.yml
+++ b/test/fixtures/campaigns.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  id: 1
   end_datetime: 2019-12-01 12:07:15
   completion: 9.99
+  corporation_id: 1
 
 two:
+  id: 2
   end_datetime: 2019-12-01 12:07:15
   completion: 9.99
+  corporation_id: 2
